fixed padding spacing.

--- a/src/components/news/index.sass
+++ b/src/components/news/index.sass
@@ -1,10 +1,10 @@
 .news
 	background: #f5f5f5
 	padding-top: 35px
-	padding-bottom: 40px
+	padding-bottom: 0
 	h2
 		font-size: 35px
-		color: rgb(51, 51, 51)
+		color: rgb(51, 51, 531)
 		text-transform: uppercase
 		line-height: 1.571
 		font-family: 'Raleway', sans-serif
@@ -88,8 +88,10 @@
 								color: rgb(255, 255, 255)
 								line-height: 1.04
 								font-weight: 400
-		@media (min-width: 768px)
+		@media (min-width: 575px)
 			.col-8
+				padding-left: 15px
+				padding-right: 15px
 				a
 					figure
 						height: 100%
@@ -100,10 +102,10 @@
 				padding-right: 0
 				display: flex
 				.item
+					padding-left: 15px
+					padding-right: 15px
 					flex: 0 0 50%
 					max-width: 50%
-					padding-left: 10px
-					padding-right: 10px
 		@media (min-width: 992px)
 			.col-8
 				flex: 0 0 66.6666%
@@ -116,21 +118,25 @@
 					max-width: 100%
 	.row
 		.col
+			padding-left: 15px
+			padding-right: 15px
 			padding-bottom: 30px
 			a
 				text-decoration: none
 				figure
-					overflow: hidden
-					overflow-y: hidden
+					height: 100%
 					background: #ffffff
-					img
-						width: 100%
-						transition: .5s all ease-in-out
+					.box-img
+						overflow: hidden
+						img
+							width: 100%
+							transition: .5s all ease-in-out
 					&:hover
 						box-shadow: 0 0 15px 0 rgba(0,0,0,.2)
-						img
-							transform: scale(1.2)
-							transition: .5s all ease-in-out
+						.box-img
+							img
+								transform: scale(1.2)
+								transition: .5s all ease-in-out
 					figcaption
 						padding-top: 30px
 						padding-left: 25px
@@ -152,9 +158,9 @@
 							font-family: 'Raleway', sans-serif
 							color: rgb(102, 102, 102)
 							line-height: 1.467
-	@media (min-width: 768px)
+	@media (min-width: 576px)
 		padding-top: 65px
-		padding-bottom: 70px
+		padding-bottom: 30px
 		.row
 			.col
 				flex: 0 0 50%
@@ -297,4 +303,3 @@
 					justify-content: center
 					align-items: center
 					font-size: 14px
-		@media (min-width: 768px)
