--- a/src/components/promotion/index.sass
+++ b/src/components/promotion/index.sass
@@ -36,6 +36,7 @@
 						font-family: 'Raleway', sans-serif
 						line-height: 1.444
 	@media (min-width: 768px)
+		padding-bottom: 25px
 		.row
 			.col
 				flex: 0 0 50%
